fix image overflow in savedDeals page deal box

--- a/public/sass/css/style.css
+++ b/public/sass/css/style.css
@@ -6825,6 +6825,9 @@ input#price-max {
   .ld_deal_box:hover {
     box-shadow: 1px 0px 3px 5px #f0f3f4; }
 
+.ld_deal_box_img img {
+  height: 100%; }
+
 .ld_deal-title {
   font-size: 2.6rem;
   color: #000000;
